Bug 45827 - Fails to redraw window borders with ColorTiling2D
Summary: Fails to redraw window borders with ColorTiling2D
Status: CLOSED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-09 04:13 UTC by Sven Arvidsson
Modified: 2012-05-29 14:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (124.43 KB, text/plain)
2012-02-09 04:13 UTC, Sven Arvidsson
no flags Details
screenshot of bug (237.01 KB, image/jpeg)
2012-02-09 04:13 UTC, Sven Arvidsson
no flags Details
Force linear aligned alloc (1.06 KB, patch)
2012-02-10 06:54 UTC, Jerome Glisse
no flags Details | Splinter Review
Screenshot of second bug (139.41 KB, image/jpeg)
2012-02-10 07:12 UTC, Sven Arvidsson
no flags Details

Description Sven Arvidsson 2012-02-09 04:13:01 UTC
Created attachment 56809 [details]
dmesg

After running the game OilRush (or several titles with Wine) window borders in the desktop environment fails to redraw (see screenshot).

This only happens when the in game resolution is less then the desktop, so running the desktop in 1680x1050 and the game in 1280x800 results in the bug, running both the desktop and the game in 1680x1050 does not result in the bug.

I'm using the GNOME fallback environment so no compositing and it's Metacity that draws the window borders.

These messages are repeated in dmesg:
[  161.611967] radeon 0000:01:00.0: evergreen_surface_check_linear_aligned:213 cb pitch 1728 invalid must be aligned with 128
[  161.611973] radeon 0000:01:00.0: evergreen_cs_track_validate_cb:426 cb[0] invalid (0x000000d7 0x00006f5f 0x00000890 0x01088168)
[  161.611977] radeon 0000:01:00.0: evergreen_packet3_check:1918 invalid cmd stream 465
[  161.611980] [drm:radeon_cs_ib_chunk] *ERROR* Invalid command stream !
[  168.020581] radeon 0000:01:00.0: evergreen_cs_track_validate_texture:728 texture bo too small (layer size 7526400, offset 0, max layer 1, depth 1, bo size 7299072) (1792 1050)



System environment:
-- system architecture: 32-bit
-- Linux distribution: Debian unstable
-- GPU: REDWOOD
-- Model: XFX Radeon HD 5670 1GB
-- Display connector: DVI
-- xf86-video-ati: e20284409937d784847339b5d466a95012d85940
-- xserver: 1.11.99.901
-- mesa: 192467108b282c19da3b11647a7a802b3d890193
-- drm: 230ec7d7bbf1e8a7e263d471b21afb08c28eba0c
-- kernel: 3.3.0-rc2 + streamout and tiling patches
Comment 1 Sven Arvidsson 2012-02-09 04:13:57 UTC
Created attachment 56810 [details]
screenshot of bug
Comment 2 Jerome Glisse 2012-02-10 06:54:31 UTC
Created attachment 56866 [details] [review]
Force linear aligned alloc

Can you check if this ddx patch fix the issue ?
Comment 3 Sven Arvidsson 2012-02-10 07:12:59 UTC
Created attachment 56873 [details]
Screenshot of second bug

(In reply to comment #2)
> 
> Can you check if this ddx patch fix the issue ?

No change with the patch I'm afraid.

There's also a second problem which might be related to this one. If ColorTiling2D is turned OFF but I launch the game in 1280x800 (or another resolution different from my desktop) I get a corrupt screen in X. 

(This does not show up in a screenshot so you'll have to excuse the crappy cell phone photo.)
Comment 4 Jerome Glisse 2012-02-13 17:13:20 UTC
Please update ddx & libdrm to master, especialy check you have following commit

lidrm:
9b3ad51ae5fd9654df8ef75de845a519015150bb
radeon: fix pitch alignment for scanout buffer

ddx:
2778b56252124ef6f636a493d2e1457b43911c37
radeon: r6xx-eg use linear general when using scratch bo

With both of those commit all you issue should be fixed.
Comment 5 Sven Arvidsson 2012-02-14 07:20:55 UTC
Thanks, it seems to be working fine now!
Comment 6 Jerome Glisse 2012-02-14 13:25:57 UTC
Reopen if any use case you have is still broken
Comment 7 Dennis Schridde 2012-05-29 14:06:16 UTC
Should this be fixed in x11-libs/libdrm-2.4.33 (installed 29/03/12) and x11-drivers/xf86-video-ati-6.14.4-r1 (installed 26/04/12)?

Wondering, because I still get:

[  261.750141] radeon 0000:03:00.0: evergreen_cs_track_validate_texture:796 texture bo too small (layer size 7526400, offset 0, max layer 1, depth 1, bo size 7299072) (1792 1050)
[  261.750151] [drm:radeon_cs_ib_chunk] *ERROR* Invalid command stream !
[  296.562519] radeon 0000:03:00.0: evergreen_cs_track_validate_texture:796 texture bo too small (layer size 7526400, offset 0, max layer 1, depth 1, bo size 7299072) (1792 1050)
[  296.562530] [drm:radeon_cs_ib_chunk] *ERROR* Invalid command stream !


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.