radeon: r6xx-eg use linear general when using scratch bo

In path where we need to use scratch bo as temporary area,
consider it as linear buffer. Not linear aligned. Fix some
case such as in bugs:

https://bugs.freedesktop.org/show_bug.cgi?id=45827

Signed-off-by: Jerome Glisse <jglisse@redhat.com>